# glad-vk-1.1-core

./: CMakeLists.txt
include/glad/: vulkan.h
